# PJC-Project

./: CMakeLists.txt  testFile.cpp
src/: main.cpp
src/GameController/: GameController.cpp  GameController.h  MathMethods.cpp  MathMethods.h
src/GameControllers/: AISpawner.cpp  AISpawner.h  GameController.cpp  GameController.h  MathMethods.cpp  MathMethods.h  Spawner.cpp  Spawner.h  TimeController.cpp  TimeController.h
src/GameObjects/: BasicEntity.h  Character.cpp  Character.h  VisualEntity.cpp  VisualEntity.h
src/GameObjects/Bullets/: Bullet.cpp  Bullet.h  EnemyBullet.cpp  EnemyBullet.h  PlayerBullet.cpp  PlayerBullet.h
src/GameObjects/Characters/: Character.cpp  Character.h
src/GameObjects/Characters/AI/: AIMelee.cpp  AIMelee.h  BaseEnemyEntity.cpp  BaseEnemyEntity.h
src/GameObjects/Characters/AI/Melee/: CircleMeleeAI.cpp  CircleMeleeAI.h  MeleeAI.cpp  MeleeAI.h  TeleportingAI.cpp  TeleportingAI.h
src/GameObjects/Characters/AI/Range/: HorizontalLineShootingAI.cpp  HorizontalLineShootingAI.h  ShootingAI.cpp  ShootingAI.h
src/GameObjects/Characters/Player/: Player.cpp  Player.h  Weapon.cpp  Weapon.h
src/GameObjects/Fruit/: Fruit.cpp  Fruit.h
src/GameObjects/Map/: Map.cpp  Map.h
src/GameObjects/Player/: Player.cpp  Player.h
src/GameObjects/UI/: UI.cpp  UI.h
